# python-project-52

./: README.md  build.sh  db.sqlite3  pyproject.toml  render.yaml  requirements.txt
task_manager/: settings.py  urls.py  views.py
task_manager/templates/: index.html
