[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Alexander <alexzhur87@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^5.0.4"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.1"
django-bootstrap5 = "^23.4"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
whitenoise = "^6.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
